# Persistent_Heuristics_Part_I

./: .gitignore  LICENSE  README.md
00.Computing L(s, χ) Zeros/: Kronecker_character_data.py  compute_Lfunc_zeros.py
01.Computed L(s, χ) Zeros and Imported ζ Zeros/: L_function_zeros.py  zeta_zeros.py
02.Theorem Scripts/: Lemma_6_6(Transition_Zone_Bound).py  Proposition_2_2(Szeta_star).py  Proposition_2_2.py  Proposition_2_4(Szeta_star).py  Proposition_6_2(Resonance_Cert).py  Proposition_6_3(Resonance_Cert).py  Proposition_Szeta_star.py  Remark_6.11(Small_M_Cases).py  Remark_6_12(J0_Role).py  Table_1_10.2_Telescoping_Convergence.py  Table_1_Lemma_6.6(Transition_Zone_Bound).py  Table_1_Lemma_7.3(Self_Referential_Suppression).py  Table_1_Lemma_7.6(Stability).py  Table_1_Proposition_9.1(Verified_Asymptotic_Independence).py  Table_1_Theorem_7.4(Telescoping_Convergence).py  Table_1_after_Lemma_7.1_and_Table_2_Remark_7.2.py  Table_2_13.1_Spacelike_Verification.py  Theorem_12_1.py  Theorem_12_2.py  Theorem_12_3.py  Theorem_3_3_Case1.py  Theorem_3_3_Case2.py  Theorem_4_10_Case1.py  Theorem_4_10_Case2.py  Theorem_9.4(Exact_Density_Law).py  Theorem_9.4_and_Corollary_9.5(Exact_Density_Law_and_Factored_Constant).py  Theorem_9_1.py  Theorem_9_2.py
06.Library/: README.md  pyproject.toml
06.Library/persistent_heuristics_I/: __init__.py  compute.py  compute_dirichlet_zeros.py  dirichlet.py  dirichlet_zeros.py  zeta.py
06.Library/persistent_heuristics_I/_data/: L_function_zeros.py  zeta_zeros.py
(+5 files in other folders)
